--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ pythran
 # additional from setup.py prev
 tqdm
 scikit-learn
-scikit-image==0.19.2
+# scikit-image==0.19.2
 pytorch-msssim==0.2.1
 tensorwatch==0.9.1
 
